# cad

./: README.md  pyproject.toml
src/cad/: lasercut_template.py  template.py
src/cad/common/: fast_sim.py  gear.py  helper.py  lasercut.py  naca.py  physics_packer.py  plan.py  polytri.py  premade.py  project_step.py  pyconvsurf.py
src/cad/common/fills_2d/: honeycomb_a.py
src/cad/common/multipart/: README.md  __init__.py  assembly.py
src/cad/common/multipart/definitions/: __init__.py  base.py  gear.py  sheet.py
src/cad/common/multipart/examples/: gear_pair.py  gear_triplet.py
src/cad/common/multipart/export/: __init__.py  dcad_ui_exporter.py  dxf_exporter.py
src/cad/common/multipart/gear/: __init__.py  util.py
src/cad/common/multipart/geometry/: __init__.py  profile2d.py  transform.py
src/cad/common/multipart/joints/: __init__.py  base.py  gear_joint.py
src/cad/common/tests/: test_lasercut.py  test_physics_packer.py  test_project_step.py  test_pyconvsurf.py
src/cad/projects/2014/airfoil/: README.md  airfoil.py  airfoil.py.scad  plane1.stl
src/cad/projects/2014/ballsculpture/: ballsculpture.py  ballsculpture.py.json  ballsculpture.py.scad  ballsculpture1.stl  ballsculpture2.stl
src/cad/projects/2014/building/: building1.py  building1.py.scad  building1.stl
src/cad/projects/2014/chain/: chain1.py  chain1.py.scad  chain1_20_14.stl  chain1_30_20.stl  chain2.py  chain2.py.scad  chain2_14_14.stl  chain3.py  chain3.py.scad  chain3_90d_14_14.stl
src/cad/projects/2014/chainmail/: chainmail1-2x3.stl  chainmail1-8x8.stl  chainmail1.py  chainmail1.py.scad
src/cad/projects/2014/cityscape/: cityscape1-2.stl  cityscape1.py  cityscape1.py.scad  cityscape1.stl
src/cad/utils/editor/: client.py  data.py  explore.ipynb  main.py  part_0.dxf  simple.glsl
src/cad/utils/screenshotter/: screenshotter.py
src/dcad_ui/: README.md  main.js  package-lock.json  package.json  preload.js
src/dcad_ui/public/: index.html
src/dcad_ui/src/: renderer.js
(+892 files in other folders)
