[tool.poetry]
name = "cad"
version = "0.1.0"
description = ""
authors = ["Daniel Winkler <dan@danwink.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10,<3.13"
solidpython = "^1.1.3"
numba = "^0.58.1"
PyMCubes = "^0.1.4"
scipy = "^1.11.1"
numpy-stl = "^3.0.1"
tqdm = "^4.66.1"
pyclipper = "^1.3.0.post4"
shapely = "^2.0.1"
noise = "^1.2.2"
networkx = "^3.1"
pillow = "^10.0.0"
opencv-python = "^4.8.1.78"
shapelysmooth = "^0.1.1"
freetype-py = "^2.4.0"
fonttools = "^4.43.1"
ezdxf = "^1.1.1"
rtree = "^1.0.1"
diskcache = "^5.6.3"
svgwrite = "^1.4.3"
triangle = {git = "https://github.com/drufat/triangle.git"}
trimesh = "^4.0.0"
mapbox-earcut = "^1.0.1"
open3d = "^0.17.0"
scikit-learn = "^1.3.2"
pyyaml = "^6.0.1"
addict = "^2.4.0"
pandas = "^2.1.1"
pixie-python = "^4.3.0"
aggdraw = "^1.3.18"
twisted = "^23.10.0"
kivy = "^2.2.1"
watchdog = "^3.0.0"
rectpack = "^0.2.2"
crochet = "^2.1.1"
dill = "^0.3.7"
svgpath2mpl = "^1.0.0"
ziafont = "^0.7"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
